added playing offline page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
       - Paddle Movement: tutorial/pong/paddleMovement.md
       - Paddle Position Data: tutorial/pong/paddlePosition.md
       - Ball Manager: tutorial/pong/ballManager.md
+      - Playing offline: tutorial/pong/offline.md
   - FrameSync:
     - Important Classes:
       - FrameSyncAgent: frameSync/importantClass/frameSyncAgent.md
