--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,10 @@ nav:
       - Frame Information: tutorial/pong/viewFrame.md
       - Rollback: tutorial/pong/Rollback.md
   - FrameSync:
+    - Overview: frameSync/framesync.md
+    - FrameSyncEngine: 
+      - FrameSyncEngineController: frameSync/frameSyncEngine/frameSyncEngineController.md
+      - Offline Mode: frameSync/frameSyncEngine/offline.md
     - Important Classes:
       - FrameSyncAgent: frameSync/importantClass/frameSyncAgent.md
   - Physics2D:
@@ -46,14 +50,14 @@ theme:
   name: material
   palette:
     - scheme: default
-      primary: red
-      accent: red
+      primary: blue
+      accent: blue
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
     - scheme: slate
-      primary: red
-      accent: red
+      primary: blue
+      accent: blue
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
