--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,11 +25,13 @@ nav:
       - Car Controller: tutorial/Soccer/carController.md
       - Game Flow: tutorial/Soccer/gameFlow.md
       - Goal: tutorial/Soccer/goal.md
+      - Camera Target Selector: tutorial/Soccer/cameraTargetSelector.md
       - Play Online: tutorial/Soccer/playOnline.md
       - HUD: tutorial/Soccer/hud.md
       - Display Score: tutorial/Soccer/displayScore.md
       - Reset to Start Position: tutorial/Soccer/reset.md
       - FrameSyncTimer: tutorial/Soccer/frameSyncTimer.md
+      - Game States Snapshot: tutorial/Soccer/snapshot.md
     - Pong Game:
       - Overview: tutorial/pong/overview.md
       - Physics 2D: tutorial/pong/parallel2d.md
